--- a/social-media-dashboard/src/App.css
+++ b/social-media-dashboard/src/App.css
@@ -33,6 +33,12 @@ h1 {
   color: hsl(0, 0%, 100%);
 }
 
+.overview {
+  color: hsl(0, 0%, 100%);
+  margin: 3em 0 2em 18%;
+
+}
+
 .switch {
   width: 160px;
   display: flex;
@@ -49,4 +55,19 @@ h1 {
   align-items: center;
   text-align: center;
   padding: 0 15vw;
+}
+
+.events {
+  width: 65%;
+  margin-left: 17%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  row-gap: 25px;
+  column-gap: 5%;
+}
+
+.light {
+  background: #34b9e2;
 }
